[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/startMenu.gd" type="Script" id=1]

[node name="startMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titlePanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 191.252
margin_top = 60.522
margin_right = -214.748
margin_bottom = -236.478
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="titlePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.4313
margin_top = 12.8863
margin_right = -56.5687
margin_bottom = -10.1138
text = "GWJ 38
Title Goes Here"

[node name="btnStartGame" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 262.0
margin_top = 208.0
margin_right = -271.0
margin_bottom = -118.0
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnOptions" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 213.479
margin_top = 268.158
margin_right = -363.521
margin_bottom = -57.8422
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCredits" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 358.132
margin_top = 267.317
margin_right = -224.868
margin_bottom = -58.6831
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btnStartGame" to="." method="_on_btnStartGame_pressed"]
[connection signal="pressed" from="btnOptions" to="." method="_on_btnOptions_pressed"]
[connection signal="pressed" from="btnCredits" to="." method="_on_btnCredits_pressed"]
